# tur

./: .gitignore  README.md  backlog.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: args.rs  cli.rs  config.rs  database.rs  db.rs  download.rs  download_manager.rs  downloads.rs  lib.rs  main.rs  settings.rs  tui.rs
src-tauri/src/downloads/: client.rs  constants.rs  coordinator.rs  core.rs  download.rs  headers.rs  index.rs  manager.rs  workers.rs
src-tauri/src/settings/: config.rs  store.rs
src/components/: AddDownloadDialog.tsx  DownloadItem.tsx  Layout.tsx  PageTransition.tsx  Sidebar.tsx  app-sidebar.tsx  header.tsx  mode-toggle.tsx
src/contexts/: SettingsContext.tsx
src/data/: mockDownloads.json
src/hooks/: useDownloads.ts  useSettings.ts
src/pages/: About.tsx  Detail.tsx  Donate.tsx  History.tsx  Home.tsx  Settings.tsx
