[package]
name = "tur"
version = "0.3.0"
edition = "2021"
authors = ["greykaizen"]
description = "A download manager built smarter and more reliable. Reimagined from the ground up."
license = "Apache-2.0"
repository = "https://github.com/greykaizen/tur.git"
readme = "README.md"

[lib]
name = "tur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["derive", "serde"] }
reqwest = { version = "0.12", features = ["stream", "socks"] }
url = "2"
tokio = { version = "1", features = ["signal", "macros"] }
futures-util = "0.3"
rusqlite = "0.32"
uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1"
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-autostart = "2"
